--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/dmotz/ExifExodus/issues"
   },
   "homepage": "http://exifexodus.com",
-  "dependencies": {
+  "devDependencies": {
     "coffee-script": "^1.8.0",
     "gulp": "^3.8.10",
     "gulp-coffee": "^2.2.0",
