--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "homepage": "http://exifexodus.com",
   "devDependencies": {
     "coffee-script": "^1.8.0",
+    "connect": "^3.3.4",
     "gulp": "^3.8.10",
     "gulp-coffee": "^2.2.0",
     "gulp-livereload": "^3.4.0",
@@ -20,6 +21,7 @@
     "gulp-stylus": "^2.0.0",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
-    "nib": "^1.0.4"
+    "nib": "^1.0.4",
+    "serve-static": "^1.8.0"
   }
 }
